syntax = "proto3";

package admin;

option go_package = "backend-shared/proto/admin;admin";

import "google/protobuf/timestamp.proto";

// AdminService handles administrative operations
service AdminService {
  // RecordUserCreated records a user creation event
  rpc RecordUserCreated(UserCreatedRequest) returns (UserCreatedResponse);
  
  // RecordUserUpdated records a user update event
  rpc RecordUserUpdated(UserUpdatedRequest) returns (UserUpdatedResponse);
  
  // RecordUserDeleted records a user deletion event
  rpc RecordUserDeleted(UserDeletedRequest) returns (UserDeletedResponse);
  
  // GetUserEvents retrieves user events
  rpc GetUserEvents(GetUserEventsRequest) returns (GetUserEventsResponse);
}

// UserCreatedRequest contains information about a newly created user
message UserCreatedRequest {
  string user_id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp created_at = 6;
  string created_by = 7;
  string service_name = 8;
}

// UserCreatedResponse returns the recorded event
message UserCreatedResponse {
  string event_id = 1;
  string user_id = 2;
  bool success = 3;
  string message = 4;
  google.protobuf.Timestamp recorded_at = 5;
}

// UserUpdatedRequest contains information about an updated user
message UserUpdatedRequest {
  string user_id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  google.protobuf.Timestamp updated_at = 6;
  string updated_by = 7;
  string service_name = 8;
  repeated string changed_fields = 9;
}

// UserUpdatedResponse returns the recorded event
message UserUpdatedResponse {
  string event_id = 1;
  string user_id = 2;
  bool success = 3;
  string message = 4;
  google.protobuf.Timestamp recorded_at = 5;
}

// UserDeletedRequest contains information about a deleted user
message UserDeletedRequest {
  string user_id = 1;
  string email = 2;
  google.protobuf.Timestamp deleted_at = 3;
  string deleted_by = 4;
  string service_name = 5;
  string reason = 6;
}

// UserDeletedResponse returns the recorded event
message UserDeletedResponse {
  string event_id = 1;
  string user_id = 2;
  bool success = 3;
  string message = 4;
  google.protobuf.Timestamp recorded_at = 5;
}

// GetUserEventsRequest requests user events
message GetUserEventsRequest {
  string user_id = 1;
  string event_type = 2;
  int32 page = 3;
  int32 page_size = 4;
  google.protobuf.Timestamp from_date = 5;
  google.protobuf.Timestamp to_date = 6;
}

// UserEvent represents a user event
message UserEvent {
  string event_id = 1;
  string user_id = 2;
  string event_type = 3;
  string email = 4;
  string username = 5;
  string service_name = 6;
  string performed_by = 7;
  google.protobuf.Timestamp event_time = 8;
  map<string, string> metadata = 9;
}

// GetUserEventsResponse returns a list of user events
message GetUserEventsResponse {
  repeated UserEvent events = 1;
  int32 total_count = 2;
  int32 page = 3;
  int32 page_size = 4;
}

